tests and readme docs updated
